@@ -235,7 +235,8 @@ enum xfrd_packet_result {
 extern xfrd_state_t* xfrd;
 
 /* start xfrd, new start. Pass socket to server_main. */
-void xfrd_init(int socket, struct nsd* nsd, int shortsoa, int reload_active);
+void xfrd_init(int socket, struct nsd* nsd, int shortsoa, int reload_active,
+	pid_t nsd_pid);
 
 /* add new slave zone, dname(from zone_opt) and given options */
 void xfrd_init_slave_zone(xfrd_state_t* xfrd, zone_options_t* zone_opt);
